[package]
name = "rangetype"
version = "0.1.1"
authors = ["teaearlgraycold <supacoofoo@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/rangetype/"
homepage = "https://github.com/teaearlgraycold/rangetype"
repository = "https://github.com/teaearlgraycold/rangetype"
description = "An Ada-inspired Range type for Rust."

[dependencies]
static_assertions = "0.2.5"
